# computeforge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/policies/: default.yaml  permissive.yaml  restricted.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api-reference.md  architecture.md  extensibility.md  getting-started.md  observability.md  safety.md
examples/: README.md  agent_with_provider.py  basic_browser_agent.py  custom_plugin.py  workflow_composition.py
src/computeforge/: __init__.py  _version.py,cover
src/computeforge/api/: routes_actions.py  routes_actions.py,cover  routes_replay.py  routes_replay.py,cover  routes_sessions.py  routes_sessions.py,cover  routes_websocket.py  routes_websocket.py,cover  server.py  server.py,cover
src/computeforge/cli/: app.py  app.py,cover  config.py  config.py,cover  replay.py  replay.py,cover  run.py  run.py,cover  shell.py  shell.py,cover
src/computeforge/core/: __init__.py  actions.py  actions.py,cover  browser.py  browser.py,cover  desktop.py  desktop.py,cover  element.py  element.py,cover  engine.py  engine.py,cover  exceptions.py  exceptions.py,cover  recovery.py  recovery.py,cover
src/computeforge/dashboard/: app.py  app.py,cover  intervention.py  intervention.py,cover  monitor.py  monitor.py,cover  replay_view.py  replay_view.py,cover  session_manager.py  session_manager.py,cover
src/computeforge/extensibility/: __init__.py  hooks.py  hooks.py,cover  plugin.py  plugin.py,cover  registry.py  registry.py,cover  skillforge.py  skillforge.py,cover
src/computeforge/models/: __init__.py  action.py  action.py,cover  capability.py  capability.py,cover  config.py  config.py,cover  session.py  session.py,cover
src/computeforge/observability/: __init__.py  flowlens.py  flowlens.py,cover  recorder.py  recorder.py,cover  replay.py  replay.py,cover  screenshots.py  screenshots.py,cover  storage.py  storage.py,cover
src/computeforge/providers/: __init__.py  base.py  base.py,cover  deepseek.py  deepseek.py,cover  gemini.py  gemini.py,cover  groq.py  groq.py,cover  ollama.py  ollama.py,cover  openai.py  openai.py,cover
src/computeforge/safety/: __init__.py  guardweave.py  guardweave.py,cover  permissions.py  permissions.py,cover  policies.py  policies.py,cover  risk.py  risk.py,cover
src/computeforge/sdk/: __init__.py  agent.py  agent.py,cover  client.py  client.py,cover  progress.py  progress.py,cover  workflow.py  workflow.py,cover
tests/: conftest.py  factories.py  test_stress.py
tests/mocks/: playwright_mock.py
tests/test_api/: test_actions.py  test_replay.py  test_server.py  test_sessions.py  test_websocket.py
tests/test_cli/: test_app.py  test_config.py  test_replay.py  test_run.py  test_shell.py
tests/test_core/: test_actions.py  test_browser.py  test_desktop.py  test_element.py  test_element_finder.py  test_engine.py  test_engine_unit.py  test_exceptions.py  test_property.py  test_recovery.py
tests/test_dashboard/: test_app.py  test_intervention.py  test_monitor.py  test_replay_view.py  test_session_manager.py
tests/test_extensibility/: test_hooks.py  test_plugin.py  test_registry.py  test_skillforge.py
tests/test_models/: test_action.py  test_capability.py  test_config.py  test_session.py
tests/test_observability/: conftest.py  test_flowlens.py  test_recorder.py  test_replay.py  test_screenshots.py  test_storage.py
tests/test_providers/: conftest.py  test_base.py  test_deepseek.py  test_gemini.py  test_groq.py  test_ollama.py  test_openai.py
tests/test_safety/: test_guardweave.py  test_permissions.py  test_policies.py  test_rate_limit.py  test_risk.py
tests/test_sdk/: test_agent.py  test_client.py  test_progress.py  test_workflow.py
