[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computeforge"
description = "Open-source, extensible Computer-Use Agent Platform — browser and desktop control with observability, safety, and developer experience"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = [
    "computer-use", "browser-automation", "ai-agents", "playwright",
    "observability", "agent-safety", "automation", "desktop-control",
]
dynamic = ["version"]

authors = [
    {name = "ComputeForge Contributors", email = "team@computeforge.ai"}
]

maintainers = [
    {name = "ComputeForge Contributors", email = "team@computeforge.ai"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]

dependencies = [
    "playwright>=1.45.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "gradio>=5.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://computeforge.ai"
Documentation = "https://computeforge.ai/docs"
Source = "https://github.com/anomalyco/computeforge"
Issues = "https://github.com/anomalyco/computeforge/issues"
Changelog = "https://github.com/anomalyco/computeforge/blob/main/CHANGELOG.md"

[project.scripts]
computeforge = "computeforge.cli.app:app"

[project.entry-points."computeforge.plugins"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "coverage>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]
deepseek = ["openai>=1.0.0"]
gemini = ["google-genai>=0.1.0"]
groq = ["openai>=1.0.0"]
ollama = ["httpx>=0.27.0"]
desktop = ["pyautogui>=0.9.54", "mss>=9.0.0"]
all = [
    "computeforge[dev,deepseek,gemini,groq,ollama,desktop]",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["computeforge*", "computeforge.*"]

[tool.setuptools.dynamic]
version = {attr = "computeforge._version.__version__"}

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "RUF"]
ignore = ["SIM117", "ARG001", "ARG002", "E501", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "SLF001", "ARG001"]
"examples/*" = ["ARG002"]
"src/computeforge/extensibility/plugin.py" = ["B027"]
"src/computeforge/cli/shell.py" = ["N802"]
"src/computeforge/api/*" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["computeforge.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires browser or network (deselect with '-m \"not integration\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/computeforge"]
omit = ["*/tests/*", "*/.venv/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\b",
]
